--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,31 @@
 CHANGELOG
 =========
 
+* 1.3 (2013-XX-XX)
+
+  * added forwarding of default_opened_level configuration parameter from Pimple to Project
+  * updated the Markdown library used internally
+  * added a check for non-clean repositories to avoid loosing changes
+  * added trait support
+
+* 1.2 (2013-09-27)
+
+  * reworked the internals to make them more decoupled and reusable
+  * added more valid PHP built-in types
+  * fixed support for PHPParser 0.9.1
+
+* 1.1 (2013-08-04)
+
+  * persisted errors in the store for later retrieval
+  * added support for @property tag for 'magic' properties
+  * added support for multiple visitors that modify a class
+  * added Markdown support
+  * fixed js bug when inside an iframe
+
+* 1.0 (2013-04-05)
+
+  * first stable release
+
 * 0.8 (2012-05-15)
 
   * initial Open-Source version
