--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ CHANGELOG
 
 * 1.3 (2013-XX-XX)
 
+  * fixed deep inheritance
   * added forwarding of default_opened_level configuration parameter from Pimple to Project
   * updated the Markdown library used internally
   * added a check for non-clean repositories to avoid loosing changes
