--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,10 @@
 CHANGELOG
 =========
 
-* 3.3.1 (2016-XX-XX)
+* 4.0.0 (2016-XX-XX)
 
- * n/a
+ * removed support for PHP 5.3 and 5.4
+ * upgraded Symfony to 3.*
 
 * 3.3.0 (2016-06-07)
 
