--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ CHANGELOG
 
 * 4.0.0 (2016-XX-XX)
 
+ * removed SymfonyFilter
  * upgraded to PHPParser 3.0 (removed support for 2.x)
  * removed support for Twig 1.x
  * removed support for PHP 5.3 and 5.4
