--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,7 +9,7 @@ CHANGELOG
  * removed SymfonyFilter
  * upgraded to PHPParser 3.0 (removed support for 2.x)
  * removed support for Twig 1.x
- * removed support for PHP 5.3 and 5.4
+ * removed support for PHP 5.x
  * upgraded Symfony to 3.*
 
 * 3.3.0 (2016-06-07)
