--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 CHANGELOG
 =========
 
+* 4.0.10 (2017-11-08)
+
+ * fixed cache bug
+
 * 4.0.9 (2017-10-28)
 
  * prevented scope collision in Sami config file
