--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 CHANGELOG
 =========
 
+* 4.0.11 (2017-12-20)
+
+ * fixed "0" as default value not shown
+
 * 4.0.10 (2017-11-08)
 
  * fixed cache bug
