--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 CHANGELOG
 =========
 
+* 4.0.12 (2017-12-31)
+
+ * added support for variadics
+
 * 4.0.11 (2017-12-20)
 
  * fixed "0" as default value not shown
