--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,9 @@
 CHANGELOG
 =========
 
-* 4.0.15 (2018-XX-XX)
+* 4.0.15 (2018-04-04)
 
- * n/a
+ * fixed @see tag support
 
 * 4.0.14 (2018-02-05)
 
